choice, test added. pretest, posttest populated